# gurls

./: .env  .gitignore  .metahash  .npmignore  Cargo.toml  Makefile  README.md  build.rs  deploy.ts  esbuild.config.mjs  gurls.meta.txt  gurls.ts  index.ts  lib.expanded.rs  lib.rs  meta.txt  mod.ts  package.json  rust-toolchain.toml
io/: Cargo.toml  lib.rs
script/: batch.ts  chat.ts  code.ts  decode_handle_output.ts  deploy.ts  index.ts  meta.ts  metadata.ts  mod.ts  postMetadata.ts  read.ts  repl.ts  rotateKeys.ts  sub.ts  verify.ts  waitForInit.ts  write.ts
state/: Cargo.toml  lib.rs
www/: config.js  gurls-v0.0.1.js  index.html  mod.tsx  script.js  styles.css
