[package]
name = "gurls"
version = "0.0.1"
edition = "2021"
description = "Gear URL Shortener (GURLS)"
license = "MIT"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "dn-revert-alloc-handling" }
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "dn-revert-alloc-handling" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
io = { workspace = true }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "dn-revert-alloc-handling" }
io = { workspace = true }

[workspace]
members = [
 "io",
 "state",
]


[workspace.dependencies]
io = { path = "io" }
state = { path = "state" }
