[package]
name = "gurls"
version = "0.0.1"
edition = "2021"
description = "Gear URL Shortener (GURLS)"
license = "MIT"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { workspace = true }
gmeta = { workspace = true }
io = { workspace = true }

[build-dependencies]
gear-wasm-builder = { workspace = true }
io = { workspace = true }

[workspace]
members = [
 "io",
]

[workspace.dependencies]
io = { path = "io" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "master" }
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "master" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "master" }
