[package]
name = "gurls"
version = "0.0.1"
edition = "2021"
description = "Gear URL Shortener (GURLS)"
include = ["**/*.rs"]
license = "MIT"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { workspace = true }
gear-core = { workspace = true }
gmeta = { workspace = true }
io = { workspace = true }

[build-dependencies]
gear-wasm-builder = { workspace = true }
io = { workspace = true }

[workspace]
members = [
 "io",
]

[workspace.dependencies]
io = { package = "gurls-io", path = "io", version = "0" }
# gstd = { git = "https://github.com/gear-tech/gear.git", branch = "master" }
# gear-core = { git = "https://github.com/gear-tech/gear.git", branch = "master" }
# gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "master" }
# gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "master" }

gstd = { version = "1.0.2-354d660.10" }
gear-core = { version = "1.0.2-pre.15" }
gmeta = { version = "1.0.2-pre.15" }
gear-wasm-builder = { version = "1.0.2-354d660.10" }

scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
