[package]
name = "io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "master" }
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "master" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
