[package]
name = "io"
version = "0.0.2"
edition = "2021"
description = "Gear URL Shortener (GURLS) message definitions"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"

[dependencies]
gstd = { workspace = true }
gmeta = { workspace = true }
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
