[package]
name = "state"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "testnet", features = ["codegen"] }
io = { workspace = true }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "testnet", features = ["metawasm"] }

[features]
binary-vendor = []
default = ["binary-vendor"]
