[package]
name = "state"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
gstd = { workspace = true }
gmeta = { workspace = true }
io = { workspace = true }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "master", features = ["metawasm"] }

[features]
binary-vendor = []
default = ["binary-vendor"]
